--- a/cloud-config/src/main/resources/application.yml
+++ b/cloud-config/src/main/resources/application.yml
@@ -5,6 +5,9 @@ server:
 spring:
   zipkin:
     base-url: ${SPRING_ZIPKIN_BASE_URL:http://localhost:9411/}
+  sleuth:
+    sampler:
+      probability: 1.0
   application:
     name: CLOUD-CONFIG
   cloud:
