--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -1,11 +1,11 @@
 
 FROM openjdk:11
-ARG PROJECT_VERSION=0.1.0
+LABEL maintainer="selimhorri.github.io"
 RUN mkdir -p /home/app
 WORKDIR /home/app
+ARG PROJECT_VERSION=0.1.0
 ENV SPRING_PROFILES_ACTIVE=dev
-ADD target/api-gateway-v${PROJECT_VERSION}.jar api-gateway.jar
+ADD api-gateway/target/api-gateway-v${PROJECT_VERSION}.jar api-gateway.jar
 EXPOSE 8080
 ENTRYPOINT ["java", "-Dspring.profiles.active=${SPRING_PROFILES_ACTIVE}", "-jar", "api-gateway.jar"]
-
 
