--- a/cloud-config/Dockerfile
+++ b/cloud-config/Dockerfile
@@ -1,11 +1,9 @@
-
 FROM openjdk:11
-ARG PROJECT_VERSION=0.1.0
+LABEL maintainer="selimhorri.github.io"
 RUN mkdir -p /home/app
 WORKDIR /home/app
+ARG PROJECT_VERSION=0.1.0
 ENV SPRING_PROFILES_ACTIVE=dev
-ADD target/cloud-config-v${PROJECT_VERSION}.jar cloud-config.jar
+ADD cloud-config/target/cloud-config-v${PROJECT_VERSION}.jar cloud-config.jar
 EXPOSE 9296
 ENTRYPOINT ["java", "-Dspring.profiles.active=${SPRING_PROFILES_ACTIVE}", "-jar", "cloud-config.jar"]
-
-
