feat: add CI/CD pipelines for DEV and STAGE environments with self-hosted runner

--- a/.github/workflows/dev-pipeline.yml
+++ b/.github/workflows/dev-pipeline.yml
@@ -3,11 +3,12 @@ name: DEV Pipeline - Build and Unit Tests
 on:
   push:
     branches:
-      - dev
-      - feature/*
-  pull_request:
-    branches:
-      - dev
+      - master
+    paths:
+      - 'user-service/**'
+      - 'proxy-client/**'
+      - '.github/workflows/dev-pipeline.yml'
+  workflow_dispatch:
 
 env:
   JAVA_VERSION: '17'
