--- a/.github/workflows/dev-pipeline.yml
+++ b/.github/workflows/dev-pipeline.yml
@@ -59,12 +59,13 @@ jobs:
           
       - name: Upload test results
         if: always()
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: unit-test-results
           path: |
             user-service/target/surefire-reports/
             user-service/target/site/
+          retention-days: 30
 
       - name: Build proxy-client
         working-directory: ./proxy-client
