--- a/.github/workflows/dev-pipeline.yml
+++ b/.github/workflows/dev-pipeline.yml
@@ -74,7 +74,7 @@ jobs:
       - name: Run unit tests for proxy-client
         working-directory: ./proxy-client
         run: |
-          mvn test -Dtest='!*IntegrationTest,!*E2ETest' || echo "No unit tests found for proxy-client"
+          mvn test -Dtest='!*IntegrationTest,!*E2ETest'
 
       - name: Build Docker images
         run: |
