--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -5,7 +5,10 @@ server:
 
 spring:
   zipkin:
-    base-url: ${SPRING_ZIPKIN_BASE_URL:http://localhost:9411/}
+    base-url: ${SPRING_ZIPKIN_BASE_URL:http://zipkin:9411/}
+    sender:
+      type: web
+    enabled: false
   sleuth:
     sampler:
       probability: 1.0
@@ -77,8 +80,14 @@ resilience4j:
 
 management:
   health:
+    livenessState:
+      enabled: false
+    readinessState:
+      enabled: false
     circuitbreakers:
       enabled: true
+    zipkin:
+      enabled: false
   endpoint:
     health:
       show-details: always
