--- a/cloud-config/Dockerfile
+++ b/cloud-config/Dockerfile
@@ -1,10 +1,9 @@
-FROM openjdk:11
-LABEL maintainer="selimhorri.github.io"
-RUN mkdir -p /home/app
-WORKDIR /home/app
 FROM eclipse-temurin:11-jre
 ARG PROJECT_VERSION=0.1.0
-ENV SPRING_PROFILES_ACTIVE=dev
+RUN mkdir -p /home/app
+WORKDIR /home/app
+ENV SPRING_PROFILES_ACTIVE dev
+COPY cloud-config/ .
 ADD cloud-config/target/cloud-config-v${PROJECT_VERSION}.jar cloud-config.jar
 EXPOSE 9296
 ENTRYPOINT ["java", "-Dspring.profiles.active=${SPRING_PROFILES_ACTIVE}", "-jar", "cloud-config.jar"]
