--- a/cloud-config/src/main/resources/application.yml
+++ b/cloud-config/src/main/resources/application.yml
@@ -4,18 +4,42 @@ server:
 
 spring:
   zipkin:
-    base-url: ${SPRING_ZIPKIN_BASE_URL:http://localhost:9411/}
+    base-url: ${SPRING_ZIPKIN_BASE_URL:http://zipkin:9411/}
+    sender:
+      type: web
+    enabled: false
   sleuth:
     sampler:
       probability: 1.0
-  application:
-    name: CLOUD-CONFIG
   cloud:
     config:
       server:
         git:
           uri: https://github.com/SelimHorri/cloud-config-server
-          clone-on-start: true
+          clone-on-start: false
+  application:
+    name: CLOUD-CONFIG
+  profiles:
+    active:
+    - dev
+
+management:
+  health:
+    livenessState:
+      enabled: false
+    readinessState:
+      enabled: false
+    circuitbreakers:
+      enabled: true
+    zipkin:
+      enabled: false
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: always
 
 resilience4j:
   circuitbreaker:
@@ -30,18 +54,6 @@ resilience4j:
         sliding-window-size: 10
         wait-duration-in-open-state: 5s
         sliding-window-type: COUNT_BASED
-
-management:
-  endpoints:
-    web:
-      exposure:
-        include: "*"
-  health:
-    circuitbreakers:
-      enabled: true
-  endpoint:
-    health:
-      show-details: always
 
 
 
