--- a/k8s/service-discovery.yaml
+++ b/k8s/service-discovery.yaml
@@ -30,20 +30,8 @@ spec:
         env:
         - name: SPRING_PROFILES_ACTIVE
           value: "dev"
-        livenessProbe:
-          httpGet:
-            path: /actuator/health
-            port: 8761
-          initialDelaySeconds: 120
-          periodSeconds: 15
-          failureThreshold: 5
-        readinessProbe:
-          httpGet:
-            path: /actuator/health
-            port: 8761
-          initialDelaySeconds: 100
-          periodSeconds: 10
-          failureThreshold: 3
+        - name: SPRING_ZIPKIN_BASE_URL
+          value: "http://zipkin:9411/"
 ---
 apiVersion: v1
 kind: Service
