--- a/service-discovery/src/main/resources/application.yml
+++ b/service-discovery/src/main/resources/application.yml
@@ -1,12 +1,32 @@
 
 spring:
   zipkin:
-    base-url: ${SPRING_ZIPKIN_BASE_URL:http://localhost:9411/}
+    base-url: ${SPRING_ZIPKIN_BASE_URL:http://zipkin:9411/}
+    sender:
+      type: web
+    enabled: false
   application:
     name: SERVICE-DISCOVERY
   profiles:
     active:
     - dev
+
+management:
+  health:
+    livenessState:
+      enabled: false
+    readinessState:
+      enabled: false
+    circuitbreakers:
+      enabled: true
+    zipkin:
+      enabled: false
+  profiles:
+    active:
+    - dev
+  endpoint:
+    health:
+      show-details: always
 
 resilience4j:
   circuitbreaker:
@@ -21,14 +41,6 @@ resilience4j:
         sliding-window-size: 10
         wait-duration-in-open-state: 5s
         sliding-window-type: COUNT_BASED
-
-management:
-  health:
-    circuitbreakers:
-      enabled: true
-  endpoint:
-    health:
-      show-details: always
 
 
 
