--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     base-url: ${SPRING_ZIPKIN_BASE_URL:http://zipkin:9411/}
     sender:
       type: web
-    enabled: false
+    enabled: true
   sleuth:
     sampler:
       probability: 1.0
