--- a/k8s/api-gateway.yaml
+++ b/k8s/api-gateway.yaml
@@ -16,14 +16,14 @@ spec:
     spec:
       containers:
       - name: api-gateway
-        image: api-gateway:v0.1.0
-        imagePullPolicy: Never
+        image: ecommercestageacr.azurecr.io/api-gateway:v1.0.0
+        imagePullPolicy: Always
         ports:
         - containerPort: 8080
         resources:
           requests:
             memory: "128Mi"
-            cpu: "50m"
+            cpu: "100m"
           limits:
             memory: "384Mi"
             cpu: "500m"
@@ -42,14 +42,14 @@ spec:
           httpGet:
             path: /actuator/health
             port: 8080
-          initialDelaySeconds: 180
+          initialDelaySeconds: 300
           periodSeconds: 15
           failureThreshold: 5
         readinessProbe:
           httpGet:
             path: /actuator/health
             port: 8080
-          initialDelaySeconds: 160
+          initialDelaySeconds: 300
           periodSeconds: 10
           failureThreshold: 3
 ---
@@ -66,3 +66,7 @@ spec:
     port: 8080
     targetPort: 8080
     nodePort: 30080  # Puerto externo para acceder via minikube
+
+
+
+
