--- a/k8s/user-service.yaml
+++ b/k8s/user-service.yaml
@@ -16,14 +16,14 @@ spec:
     spec:
       containers:
       - name: user-service
-        image: user-service:v0.1.0
-        imagePullPolicy: Never
+        image: ecommercestageacr.azurecr.io/user-service:v1.0.0
+        imagePullPolicy: Always
         ports:
         - containerPort: 8700
         resources:
           requests:
             memory: "128Mi"
-            cpu: "50m"
+            cpu: "100m"
           limits:
             memory: "384Mi"
             cpu: "500m"
@@ -44,14 +44,14 @@ spec:
           httpGet:
             path: /user-service/actuator/health
             port: 8700
-          initialDelaySeconds: 180
+          initialDelaySeconds: 300
           periodSeconds: 15
           failureThreshold: 5
         readinessProbe:
           httpGet:
             path: /user-service/actuator/health
             port: 8700
-          initialDelaySeconds: 160
+          initialDelaySeconds: 300
           periodSeconds: 10
           failureThreshold: 3
 ---
@@ -67,3 +67,7 @@ spec:
   - name: http
     port: 8700
     targetPort: 8700
+
+
+
+
