--- a/k8s/api-gateway.yaml
+++ b/k8s/api-gateway.yaml
@@ -58,14 +58,13 @@ kind: Service
 metadata:
   name: api-gateway
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
     app: api-gateway
   ports:
   - name: http
     port: 8080
     targetPort: 8080
-    nodePort: 30080  # Puerto externo para acceder via minikube
 
 
 
