--- a/compose.yml
+++ b/compose.yml
@@ -6,65 +6,74 @@ services:
     ports:
       - 9411:9411
   service-discovery-container:
-    image: selimhorri/service-discovery-ecommerce-boot:0.1.0
+    image: service-discovery:v0.1.0
     ports:
       - 8761:8761
     environment:
       - SPRING_PROFILES_ACTIVE=dev
   cloud-config-container:
-    image: selimhorri/cloud-config-ecommerce-boot:0.1.0
+    image: cloud-config:v0.1.0
     ports:
       - 9296:9296
     environment:
       - SPRING_PROFILES_ACTIVE=dev
+      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://service-discovery-container:8761/eureka
   api-gateway-container:
-    image: selimhorri/api-gateway-ecommerce-boot:0.1.0
+    image: api-gateway:v0.1.0
     ports:
       - 8080:8080
     environment:
       - SPRING_PROFILES_ACTIVE=dev
+      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://service-discovery-container:8761/eureka
   proxy-client-container:
-    image: selimhorri/proxy-client-ecommerce-boot:0.1.0
+    image: proxy-client:v0.1.0
     ports:
       - 8900:8900
     environment:
       - SPRING_PROFILES_ACTIVE=dev
+      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://service-discovery-container:8761/eureka
   order-service-container:
-    image: selimhorri/order-service-ecommerce-boot:0.1.0
+    image: order-service:v0.1.0
     ports:
       - 8300:8300
     environment:
       - SPRING_PROFILES_ACTIVE=dev
+      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://service-discovery-container:8761/eureka
   payment-service-container:
-    image: selimhorri/payment-service-ecommerce-boot:0.1.0
+    image: payment-service:v0.1.0
     ports:
       - 8400:8400
     environment:
       - SPRING_PROFILES_ACTIVE=dev
+      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://service-discovery-container:8761/eureka
   product-service-container:
-    image: selimhorri/product-service-ecommerce-boot:0.1.0
+    image: product-service:v0.1.0
     ports:
       - 8500:8500
     environment:
       - SPRING_PROFILES_ACTIVE=dev
+      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://service-discovery-container:8761/eureka
   shipping-service-container:
-    image: selimhorri/shipping-service-ecommerce-boot:0.1.0
+    image: shipping-service:v0.1.0
     ports:
       - 8600:8600
     environment:
       - SPRING_PROFILES_ACTIVE=dev
+      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://service-discovery-container:8761/eureka
   user-service-container:
-    image: selimhorri/user-service-ecommerce-boot:0.1.0
+    image: user-service:v0.1.0
     ports:
       - 8700:8700
     environment:
       - SPRING_PROFILES_ACTIVE=dev
+      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://service-discovery-container:8761/eureka
   favourite-service-container:
-    image: selimhorri/favourite-service-ecommerce-boot:0.1.0
+    image: favourite-service:v0.1.0
     ports:
       - 8800:8800
     environment:
       - SPRING_PROFILES_ACTIVE=dev
+      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://service-discovery-container:8761/eureka
 
 
 
