--- a/.github/workflows/cd-pipeline.yml
+++ b/.github/workflows/cd-pipeline.yml
@@ -5,15 +5,17 @@ on:
     workflows: ["CI Pipeline - Build, Test & Security"]
     types:
       - completed
+  workflow_dispatch:
 
 env:
   ACR_NAME: ecommercestageacr
-  IMAGE_TAG: ${{ github.event.workflow_run.head_sha }} # Use the SHA from the CI pipeline run
+  # Use the SHA from the CI pipeline run if triggered by workflow_run, otherwise use the current commit SHA
+  IMAGE_TAG: ${{ github.event.workflow_run.head_sha || github.sha }} 
 
 jobs:
   deploy-stage:
     name: Deploy to STAGE & E2E Tests
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ github.event_name == 'workflow_dispatch' || github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     environment: 
       name: stage
@@ -34,12 +36,7 @@ jobs:
           resource-group: ecommerce-stage-rg
           cluster-name: ecommerce-stage-aks
 
-      - name: Clean Previous Deployments
-        run: |
-          echo "Deleting existing deployments to free up resources..."
-          kubectl delete deployment --all --ignore-not-found=true
-          sleep 30
-
+      # Rollout Strategy: Update images in manifests and apply. Kubernetes handles the rolling update.
       - name: Update Kubernetes Manifests
         run: |
           find k8s -name "*.yaml" -exec sed -i "s|ecommercestageacr.azurecr.io/\(.*\):.*|ecommercestageacr.azurecr.io/\1:${{ env.IMAGE_TAG }}|g" {} +
@@ -48,10 +45,10 @@ jobs:
         run: |
           kubectl apply -f k8s/
       
-      - name: Wait for Pods to be Ready
+      - name: Wait for Rollout to Complete
         run: |
-          echo "Waiting for pods to be ready (timeout 20m)..."
-          kubectl wait --for=condition=ready pod --all --timeout=1200s || echo "Some pods are not ready yet, proceeding to tests anyway..."
+          echo "Waiting for pods to be ready (timeout 10m)..."
+          kubectl wait --for=condition=ready pod --all --timeout=600s || echo "Some pods are not ready yet, proceeding to tests anyway..."
 
       - name: Install Newman
         run: npm install -g newman
@@ -85,12 +82,7 @@ jobs:
           resource-group: ecommerce-prod-rg
           cluster-name: ecommerce-prod-aks
 
-      - name: Clean Previous Deployments
-        run: |
-          echo "Deleting existing deployments to free up resources..."
-          kubectl delete deployment --all --ignore-not-found=true
-          sleep 30
-
+      # Rollout Strategy: Update images in manifests and apply. Kubernetes handles the rolling update.
       - name: Update Kubernetes Manifests
         run: |
           find k8s -name "*.yaml" -exec sed -i "s|ecommercestageacr.azurecr.io/\(.*\):.*|ecommercestageacr.azurecr.io/\1:${{ env.IMAGE_TAG }}|g" {} +
