feat: update feature toggle

--- a/k8s/proxy-client.yaml
+++ b/k8s/proxy-client.yaml
@@ -16,8 +16,8 @@ spec:
     spec:
       containers:
       - name: proxy-client
-        image: ecommercestageacr.azurecr.io/proxy-client:v1.0.0
-        imagePullPolicy: Always
+        image: proxy-client:v0.1.0
+        imagePullPolicy: Never
         ports:
         - containerPort: 8900
         resources:
