--- a/proxy-client/pom.xml
+++ b/proxy-client/pom.xml
@@ -84,6 +84,10 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-sleuth-zipkin</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>io.github.resilience4j</groupId>
+			<artifactId>resilience4j-bulkhead</artifactId>
+		</dependency>
 	</dependencies>
 	
 	<dependencyManagement>
