--- a/proxy-client/src/main/resources/application.yml
+++ b/proxy-client/src/main/resources/application.yml
@@ -1,4 +1,3 @@
-
 server:
   servlet:
     context-path: /app
@@ -37,6 +36,11 @@ resilience4j:
         sliding-window-size: 10
         wait-duration-in-open-state: 5s
         sliding-window-type: COUNT_BASED
+  bulkhead:
+    instances:
+      productClientService:
+        maxConcurrentCalls: 5
+        maxWaitDuration: 0ms
 
 feign:
   circuitbreaker:
@@ -60,6 +64,10 @@ management:
   endpoint:
     health:
       show-details: always
+
+logging:
+  level:
+    io.github.resilience4j: DEBUG
 
 
 
