feat: add loadbalancer for prmetheus

--- a/k8s/prometheus.yaml
+++ b/k8s/prometheus.yaml
@@ -103,7 +103,7 @@ kind: Service
 metadata:
   name: prometheus
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   selector:
     app: prometheus
   ports:
